<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp" app:srcCompat="@color/common_google_signin_btn_text_dark_default"
                android:id="@+id/preview"
                android:contentDescription="@string/todo"
                tools:layout_editor_absoluteY="16dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/spot_name" android:gravity="center"
                android:layout_marginTop="20dp" android:hint="画像の名前"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/detail" android:hint="画像についての説明" android:gravity="center"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center">
            <Button
                    android:text="@string/button_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_send"
                    tools:layout_editor_absoluteX="50dp" tools:layout_editor_absoluteY="386dp"/>
            <Button
                    android:text="@string/button_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_pic"
                    android:visibility="visible"
                    tools:layout_editor_absoluteY="386dp" tools:layout_editor_absoluteX="215dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>